# instagram-reel-downloader-backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: broker.py  exceptions.py  main.py  middlewares.py  models.py
app/api/: deps.py  main.py
app/api/routes/: download_reel.py  reels.py  tasks.py  users.py
app/application/event_handlers/: reel_handlers.py
app/application/services/: reel_service.py
app/core/: config.py  db.py  dependencies.py  encryption.py
app/domain/events/: base.py  reel_events.py
app/domain/models/: reel.py
app/infrastructure/event_bus/: in_memory_event_bus.py
app/services/: audio.py  download.py  transcript.py
hooks/: pytest-gate.py
test/: conftest.py  test_middlewares.py
test/api/routes/: test_download_reel.py  test_tasks.py  test_users.py
test/services/: test_audio.py  test_download.py  test_transcript.py
tests/: test_api_reels.py  test_event_bus.py  test_reel_handler.py  test_reel_service.py
