[project]
name = "instagram-reel-downloader-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "psycopg2-binary>=2.9.9",
    "instaloader>=4.15",
    "sqlmodel>=0.0.37",
    "taskiq>=0.12.1",
    "taskiq-fastapi>=0.4.0",
    "taskiq-redis>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-env>=1.5.0",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
env = [
    "ENVIRONMENT=pytest",
    "DATABASE_URL=sqlite://",
]
